--- a/report.html
+++ b/report.html
@@ -26,7 +26,7 @@
       <form action="" method="post">   <!-- Remember to enter URI -->
         <div class="form-group">
           <label for="message" placeholder="Describe what happened...">Message</label>
-          <textarea class="form-control" rows="20"></textarea>
+          <textarea id="message" name="message" class="form-control" rows="20"></textarea>
         </div>
 
         <div class="form-group">
