Update form action endpoint in report.html to point to thankyou.php

--- a/report.html
+++ b/report.html
@@ -23,7 +23,7 @@
   <body>
     <div class="container">
       <h1>Report an incident</h1>
-      <form action="" method="post">   <!-- Remember to enter URI -->
+      <form action="thankyou.php" method="post">   <!-- Remember to enter URI -->
         <div class="form-group">
           <label for="message" placeholder="Describe what happened...">Message</label>
           <textarea id="message" name="message" class="form-control" rows="20"></textarea>
