Update HTML with links to common stylesheet; update stylesheet with button styles and body background

--- a/report.html
+++ b/report.html
@@ -18,7 +18,7 @@
     <![endif]-->
 
     <!-- link to custom CSS file -->
-    <link href="css/customstyle.css" rel="stylesheet">
+    <link href="css/mystyle.css" rel="stylesheet">
   </head>
  
   <body>
