--- a/decision.html
+++ b/decision.html
@@ -18,7 +18,8 @@
     <![endif]-->
 
     <!-- link to custom CSS file -->
-    <link href="css/mystyle.css" rel="stylesheet">
+    <link href="css/mystyle.css" rel="stylesheet">                                                                           
+
   </head>
   <body>
     <div class="container">
@@ -58,6 +59,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
+<footer>
+</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
