--- a/report.html
+++ b/report.html
@@ -105,8 +105,11 @@
   
     <div class = "col-md-6 text-center">
       ashdhasdgvasdvsa
-    </div>h
     </div>
+    </div>
+
+<footer>
+</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
