added header navigation styling

--- a/report.html
+++ b/report.html
@@ -18,13 +18,15 @@
     <![endif]-->
 
     <!-- link to custom CSS file -->
-    <link href="css/reset.css" rel="stylesheet"> <!-- clears all CSS -->
-    <link href="css/customstyle.css" rel="stylesheet">
+    <!-- <link href="css/reset.css" rel="stylesheet"> --> <!-- clears all CSS -->
+    <link href="css/mystyle.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <img src="images/speaksafe-logo-small.png" class="logo">
+      <img src="images/speaksafe-logo-small.png" class="logo" width="500px">
+      <img src="images/help-me.png" class="helpbtn">
+      <img src="images/close-site.png" class="closebtn">
 
     </header>
       <h1>Report an incident</h1>
