--- a/decision.html
+++ b/decision.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h1>How can we assist you?</h1>
       <h2>About you </h2>
-      <form action="" method="post" name="decision">   <!-- Remember to enter URI -->
+      <form action="thankyou.php" method="post" name="decision">   <!-- Remember to enter URI -->
         <div class="form-group">
           <label for="name" placeholder="What is your name">Name (optional)</label>
           <input type="text" class="form-control" id="name"></input>
