added header nav to decision

--- a/decision.html
+++ b/decision.html
@@ -19,11 +19,19 @@
 
     <!-- link to custom CSS file -->
 
-    <link href="css/mystyle.css" rel="stylesheet">                                                                           
+    <link href="css/mystyle.css" rel="stylesheet">
 
 
   </head>
   <body>
+    <!-- header nav -->
+    <header>
+      <img src="images/speaksafe-logo-small.png" class="logo" width="500px">
+      <img src="images/help-me.png" class="helpbtn">
+      <img src="images/close-site.png" class="closebtn">
+      <!-- end header nav -->
+    </header>
+
     <div class="container">
       <h1>How can we assist you?</h1>
       <h2>About you </h2>
