--- a/report.html
+++ b/report.html
@@ -85,11 +85,11 @@
 
 
     <div class = "col-md-6 text-center">
-      ashdhasdgvasdvsa
     </div>
     </div>
 
 <footer>
+  <div class="blankfooter"> blank footer div</div>
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
